# python-project-template

./: .gitconfig  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  cookiecutter.json
.github/workflows/: bump_version_create_PR.yml  draft_release.yml  test.yml
hooks/: post_gen_project.py
tests/: context.yaml  test_project_generation.py
{{cookiecutter.project_slug}}/: .gitignore  .kacl.yml  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: CI.yml  bump_version_create_PR.yml  cruft_update.yml  draft_release.yml
{{cookiecutter.project_slug}}/notebooks/: example_notebook.ipynb
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __init__.py  app.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/core/: configs.py  log_config.py
{{cookiecutter.project_slug}}/tests/: test_config.py
